--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,10 @@
 name: "Search dog training guide"
 title: "The title"
 description: "Your unofficial guide for IRO testing events and training"
-logo: 'assets/images/logo.png'
-favicon: 'assets/images/logo.png'
+logo: 'assets/images/favicon-32x32.png'
 baseurl:
 google_analytics: 'UA-46278016-1'
-disqus: 'demowebsite'
+disqus: 'iro-dog'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
